chore: update 18 files
Changed: apis/app-api/promotion/sdkwork-promotion-app-api.openapi.json, crates/sdkwork-routes-promotion-app-api/src/http_route_manifest.rs, crates/sdkwork-routes-promotion-app-api/src/promotion_router.rs, crates/sdkwork-routes-promotion-app-api/src/web_bootstrap.rs, crates/sdkwork-routes-promotion-backend-api/src/web_bootstrap.rs, ... (18 total)
